--- a/assets/style.css
+++ b/assets/style.css
@@ -4,8 +4,9 @@ html, body {width: 100vw; height: 100vh; margin: 0; padding: 0; overflow: hidden
 #main {position: absolute; left: 0; top: 0; width: 100vw; height: 100vh; display: flex; flex-direction: column;}
 
 #header {background: #2f1bc8;}
-#header .title {padding: 20px 10px; text-align: center; color: #FFF;}
-#header .title h1 {margin: 0; padding: 0; font-size: 20px; font-weight: bold;}
+#header .title {padding: 15px 5px; text-align: center; color: #FFF;}
+#header .title h1 {display: inline-block; margin: 0; padding: 5px 0 5px 35px; font-size: 20px; font-weight: bold; background: url('./icon.svg') no-repeat 0 0;}
+#header .title h1 img {vertical-align: middle;}
 #header .selector {padding: 0 10px 10px; margin: 0 auto; display: flex; flex-direction: row; width: 100%; max-width: 1000px; box-sizing: border-box;}
 #header .selector .choice {flex: 3; min-width: 60px; margin: 0 5px;}
 #header .selector .choice.mode {flex: 1;}
