--- a/assets/style.css
+++ b/assets/style.css
@@ -25,5 +25,5 @@ html, body {width: 100vw; height: 100vh; margin: 0; padding: 0; overflow: hidden
 }
 @media (min-width: 800px) {
     #footer {display: flex;}
-    #footer .row.credits {flex: 1; text-align: right;}
+    #footer .row.credits {flex: 1; text-align: right; white-space: nowrap;}
 }
